added controllers for updating and deleting, added a edit dialog, added cancel button to various locations

--- a/JobTrackerApp/src/components/manage-dialog-popups/dialog-employerprofiles/dialog-employerprofiles/dialog-employerprofiles.component.html
+++ b/JobTrackerApp/src/components/manage-dialog-popups/dialog-employerprofiles/dialog-employerprofiles/dialog-employerprofiles.component.html
@@ -87,7 +87,7 @@
             </mat-tab>
         </mat-tab-group>
         <span class="span-custom" *ngIf="selectedTabIndex === 0">
-            <button type="button" [disabled]="!isFormValid()" (click)="onSubmit()" class="submit-button">Save</button>
+            <button type="button" [disabled]="!isFormValid()" (click)="onSubmit()" class="submit-button">Submit</button>
             <button type="button" (click)="onCancel()" class="cancel-button">Cancel</button>
         </span>
     </div>
