--- a/JobTrackerApp/src/components/manage-employerprofiles/employerprofile/employerprofile.component.scss
+++ b/JobTrackerApp/src/components/manage-employerprofiles/employerprofile/employerprofile.component.scss
@@ -57,6 +57,14 @@ label {
   margin-bottom: 2%;
 }
 
+.action-title {
+  color: rgb(54, 0, 179);
+  font-size: 20px;
+  font-weight: bold;
+  align-items: center;
+  text-align: center;
+}
+
 // .vertical-tabs {
 //   display: flex;
 //   flex-direction: row;
