--- a/JobTrackerApp/src/components/manage-jobprofiles/jobprofile/jobprofile.component.html
+++ b/JobTrackerApp/src/components/manage-jobprofiles/jobprofile/jobprofile.component.html
@@ -1,23 +1,23 @@
 <div class="flex-container-components-inner">
-  <div class="jobprofile-welcome-custom">Welcome to your Job Portal, {{_userName}}</div>
+  <div class="jobprofile-welcome-custom">Welcome to your Job Portal, {{userName}}</div>
   <mat-form-field>
     <mat-label>Profile</mat-label>
-    <mat-select [(value)]="_jobProfileSelected" matTooltip="Select your profile" (selectionChange)="onJobProfileChange($event)">
-      <mat-option [value]="null" matTooltip="Add/Edit/Update a Job Profile" matTooltipPosition="right" (click)="onJobDefaultClick() ">Add / Edit / Delete</mat-option>
-      <mat-option *ngFor="let jobProfile of _jobProfiles" [value]="jobProfile">{{jobProfile.profileName}}</mat-option>
+    <mat-select [(value)]="jobProfileSelected" matTooltip="Select your profile" (selectionChange)="onJobProfileChange($event)">
+      <mat-option [value]="null" matTooltipPosition="right" (click)="onJobDefaultClick()">Default Profile</mat-option>
+      <mat-option *ngFor="let jobProfile of jobProfiles" [value]="jobProfile">{{jobProfile.profileName}}</mat-option>
     </mat-select>
   </mat-form-field>
   <span>
-    <mat-icon class="jobprofile-icons" matTooltip="Add new job profile" fontIcon="add" *ngIf="_showJobOptions" (click)="onCreateJobProfile()"></mat-icon>
-    <mat-icon class="jobprofile-icons" matTooltip="Update profile" fontIcon="edit" *ngIf="_showJobOptions" (click)="onEditJobProfile()"></mat-icon>
-    <mat-icon class="jobprofile-icons" matTooltip="Delete profile" fontIcon="delete" *ngIf="_showJobOptions" (click)="onDeleteJobProfile()"></mat-icon>
+    <mat-icon class="jobprofile-icons" matTooltip="Add new job profile" fontIcon="add" *ngIf="showJobOptions" (click)="onCreateJobProfile()"></mat-icon>
+    <mat-icon class="jobprofile-icons" matTooltip="Update job profile" fontIcon="edit" *ngIf="isSelected" (click)="onEditJobProfile()"></mat-icon>
+    <mat-icon class="jobprofile-icons" matTooltip="Delete job profile" fontIcon="delete" *ngIf="isSelected" (click)="onDeleteJobProfile()"></mat-icon>
   </span>
-  <span class="span-right">
-    <mat-icon class="employerprofile-icons" matTooltip="Add new employer profile" fontIcon="add" *ngIf="_showEmployerOptions" (click)="onCreateEmployerProfile()"></mat-icon>
-    <mat-icon class="employerprofile-icons" matTooltip="Update profile" fontIcon="edit" *ngIf="_showEmployerOptions" (click)="onEditEmployerProfile()"></mat-icon>
-    <mat-icon class="employerprofile-icons" matTooltip="Delete profile" fontIcon="delete" *ngIf="_showEmployerOptions" (click)="onDeleteEmployerProfile()"></mat-icon>
-  </span>
-  <table mat-table *ngIf="_isSelected" [dataSource]="dataSource" class="mat-elevation-z8 table-border">
+  <!-- <span class="span-right">
+    <mat-icon class="employerprofile-icons" matTooltip="Add new employer profile" fontIcon="add" *ngIf="showEmployerOptions" (click)="onCreateEmployerProfile()"></mat-icon>
+    <mat-icon class="employerprofile-icons" matTooltip="Update employer profile" fontIcon="edit" *ngIf="showEmployerOptions" (click)="onEditEmployerProfile()"></mat-icon>
+    <mat-icon class="employerprofile-icons" matTooltip="Delete employer profile" fontIcon="delete" *ngIf="showEmployerOptions" (click)="onDeleteEmployerProfile()"></mat-icon>
+  </span> -->
+  <table mat-table *ngIf="isSelected" [dataSource]="dataSource" class="mat-elevation-z8 table-border">
 
     <!--- Note that these columns can be defined in any order.
           The actual rendered columns are set as a property on the row definition" -->
@@ -68,13 +68,13 @@
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
 
-  <mat-paginator *ngIf="_isSelected"
+  <mat-paginator *ngIf="isSelected"
   #paginator
   (page)="onPageChange($event)"
   [length]="totalRecords"
   [pageIndex]="pageIndex"
   [pageSize]="pageSize"
-  [pageSizeOptions]="[5, 10, 25, 100]"
+  [pageSizeOptions]="[5, 10, 15]"
   showFirstLastButtons>
   </mat-paginator>
 </div>
