added register to the backend and front end

--- a/JobTrackerApp/src/components/manage-users/registeruser/registeruser.component.html
+++ b/JobTrackerApp/src/components/manage-users/registeruser/registeruser.component.html
@@ -9,4 +9,9 @@
   <input matInput type="password" placeholder="Enter your password" required [(ngModel)]="_password" name="password"
     style="margin-left: 3px;">
 </div>
-<app-submitbutton-modular></app-submitbutton-modular>
+<div>
+  <mat-label class="register-label-custom">Confirm Password</mat-label>
+  <input matInput type="password" placeholder="Enter your password" required [(ngModel)]="_confirmPassword" name="comfirmpassword"
+    style="margin-left: 3px;">
+</div>
+<app-submitbutton-modular [(ngModel)]="_registerUser"/>
