--- a/JobTrackerApp/src/components/modular/submitbutton-modular/submitbutton-modular.component.html
+++ b/JobTrackerApp/src/components/modular/submitbutton-modular/submitbutton-modular.component.html
@@ -1,3 +1,3 @@
 <div class="submit-button">
-    <button  mat-raised-button color="primary" (click)="submit()">Create</button>
+    <button  mat-raised-button color="primary" (click)="submit()">Submit</button>
   </div>
