Added interface to context class, added encrption class to login servicesadded xunit for testing

--- a/JobTrackerApp/src/components/manage-users/registeruser/registeruser.component.html
+++ b/JobTrackerApp/src/components/manage-users/registeruser/registeruser.component.html
@@ -11,9 +11,9 @@
       style="margin-left: 3px;">
   </div>
   <div>
-    <mat-label class="register-label-custom">Confirm Password</mat-label>
-    <input matInput type="password" placeholder="Enter your password" required [(ngModel)]="_confirmPassword" name="comfirmpassword"
-      style="margin-left: 3px;">
+    <mat-label class="register-label-custom">Confirm</mat-label>
+    <input matInput type="password" placeholder="Enter password Again" required [(ngModel)]="_confirmPassword" name="comfirmpassword"
+      style="margin-left: 9.2px;">
   </div>
   <!-- [formData]="{ email: _email, password: _password, confirmPassword: _confirmPassword }" -->
   <app-submitbutton-modular
