created a modular logout button, use authservice to do token logics now

--- a/JobTrackerApp/src/app/app.component.html
+++ b/JobTrackerApp/src/app/app.component.html
@@ -2,7 +2,8 @@
   <div class="flex-container">
     <mat-icon aria-hidden="false" class="title-icon" fontIcon="home" matTooltip="Go to main page" (click)="mainpage()"></mat-icon>
     JobTrackerApp
-    <button class="logout-button" mat-raised-button color="primary" (click)="logout()">Logout</button>
+    <!-- <button class="logout-button" mat-raised-button color="primary" (click)="logout()">Logout</button> -->
+     <app-logoutbutton-modular></app-logoutbutton-modular>
   </div>
 </div>
 
