--- a/JobTrackerApp/src/app/app.component.scss
+++ b/JobTrackerApp/src/app/app.component.scss
@@ -86,9 +86,9 @@
   min-height: 100vh; /* Ensure the container takes up the full height of the viewport */
 }
 
-.logout-button {
-float: right; /* Float the button to the right */
-}
+// .logout-button {
+// float: right; /* Float the button to the right */
+// }
 
 .title-icon {
   //font-size: large; /* Set the size of the icon */
