--- a/JobTrackerApp/src/components/manage-jobprofiles/jobprofile/jobprofile.component.html
+++ b/JobTrackerApp/src/components/manage-jobprofiles/jobprofile/jobprofile.component.html
@@ -17,47 +17,47 @@
     <mat-icon class="employerprofile-icons" matTooltip="Update employer profile" fontIcon="edit" *ngIf="showEmployerOptions" (click)="onEditEmployerProfile()"></mat-icon>
     <mat-icon class="employerprofile-icons" matTooltip="Delete employer profile" fontIcon="delete" *ngIf="showEmployerOptions" (click)="onDeleteEmployerProfile()"></mat-icon>
   </span>
-  <table mat-table *ngIf="isSelected" [dataSource]="dataSource" matSort (matSortChange)="sortData(sort)" class="mat-elevation-z8 table-border">
+  <table mat-table *ngIf="isSelected" [dataSource]="dataSource" matSort (matSortChange)="sortData($event)" class="mat-elevation-z8 table-border">
 
     <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef> Name </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Name"> Name </th>
       <td mat-cell *matCellDef="let element"> 
         <a href="#" (click)="onNameClick($event, element)">{{element.name}}</a>
       </td>
     </ng-container>
 
     <ng-container matColumnDef="city">
-      <th mat-header-cell *matHeaderCellDef> City </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by City"> City </th>
       <td mat-cell *matCellDef="let element"> {{element.city}} </td>
     </ng-container>
   
     <ng-container matColumnDef="state">
-      <th mat-header-cell *matHeaderCellDef> State </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by State"> State </th>
       <td mat-cell *matCellDef="let element"> {{element.state}} </td>
     </ng-container>
 
     <ng-container matColumnDef="phone">
-      <th mat-header-cell *matHeaderCellDef> Phone </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Phone"> Phone </th>
       <td mat-cell *matCellDef="let element"> {{element.phone}} </td>
     </ng-container>
 
     <ng-container matColumnDef="email">
-      <th mat-header-cell *matHeaderCellDef> Email </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Email"> Email </th>
       <td mat-cell *matCellDef="let element"> {{element.email}} </td>
     </ng-container>
 
     <ng-container matColumnDef="website">
-      <th mat-header-cell *matHeaderCellDef> Website </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Website"> Website </th>
       <td mat-cell *matCellDef="let element"> {{element.website}} </td>
     </ng-container>
 
     <ng-container matColumnDef="date">
-      <th mat-header-cell *matHeaderCellDef> Date </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Date"> Date </th>
       <td mat-cell *matCellDef="let element"> {{element.date}} </td>
     </ng-container>
 
     <ng-container matColumnDef="latestupdate">
-      <th mat-header-cell *matHeaderCellDef> Latest Update </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Lastest Update"> Latest Update </th>
       <td mat-cell *matCellDef="let element"> {{element.latestUpdate}} </td>
     </ng-container>
   
