code clean up, removed aria-hidden false

--- a/JobTrackerApp/src/components/manage-dialog-popups/dialog-employerprofiles/dialog-employerprofiles.component.html
+++ b/JobTrackerApp/src/components/manage-dialog-popups/dialog-employerprofiles/dialog-employerprofiles.component.html
@@ -1,7 +1,7 @@
 <div class="flex-container-components-inner">
     <p class="action-title">Create Employer Profile</p>
     <!-- <p class="important-redtext">*Required Fields</p> -->
-    <mat-icon aria-hidden="false" aria-label="Close" (click)="onClose()" class="close-icon">close</mat-icon>
+    <mat-icon aria-label="Close" (click)="onClose()" class="close-icon">close</mat-icon>
     <div class="flex-container-components-inner">
         <mat-tab-group class="vertical-tabs" mat-align-tabs="start" (selectedTabChange)="onTabChange($event)">
             <mat-tab [disabled]="employerTab" label="EmployerProfile">
