--- a/JobTrackerApp/src/components/manage-dialog-popups/dialog-userprofiles/dialog-userprofiles/dialog-userprofiles.component.html
+++ b/JobTrackerApp/src/components/manage-dialog-popups/dialog-userprofiles/dialog-userprofiles/dialog-userprofiles.component.html
@@ -1,6 +1,6 @@
 <div class="flex-container-components-inner">
     <p>Add New User Profile</p>
-    <mat-icon aria-hidden="false" aria-label="Close" (click)="onClose()" class="close-icon">close</mat-icon>
+    <mat-icon aria-label="Close" (click)="onClose()" class="close-icon">close</mat-icon>
     <div class="flex-container-components-inner">
         <mat-tab-group class="vertical-tabs" mat-align-tabs="start" (selectedTabChange)="onTabChange($event)">
             <mat-tab label="UserProfile">
