--- a/JobTrackerApp/src/components/modular/popupform/popupform-modular/popupform-modular.component.html
+++ b/JobTrackerApp/src/components/modular/popupform/popupform-modular/popupform-modular.component.html
@@ -1,6 +1,6 @@
 <div class="flex-container-components-inner">
     <p>Add New User Profile</p>
-    <mat-icon aria-hidden="false" aria-label="Close" (click)="onCloseRegister()" class="close-icon">close</mat-icon>
+    <mat-icon aria-label="Close" (click)="onCloseRegister()" class="close-icon">close</mat-icon>
     <div class="flex-container-components-inner">
         <form [formGroup]="userProfileForm" (ngSubmit)="onSubmitRegister()">
 
