--- a/JobTrackerApp/src/app/app.component.html
+++ b/JobTrackerApp/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="header-info">
   <div class="flex-container">
-    <mat-icon aria-hidden="false" class="title-icon" fontIcon="home" matTooltip="Go to main page" (click)="mainpage()"></mat-icon>
+    <mat-icon class="title-icon" fontIcon="home" matTooltip="Go to main page" (click)="mainpage()"></mat-icon>
     JobTrackerApp
     <!-- <button class="logout-button" mat-raised-button color="primary" (click)="logout()">Logout</button> -->
      <app-logoutbutton-modular></app-logoutbutton-modular>
