--- a/JobTrackerApp/src/components/custom-components/custom-employer-snackbar/custom-employersnackbar/custom-employersnackbar.component.html
+++ b/JobTrackerApp/src/components/custom-components/custom-employer-snackbar/custom-employersnackbar/custom-employersnackbar.component.html
@@ -1,4 +1,4 @@
 <span class="snackbar-info">Exit & Save? Changes will be lost if you don't save them. or Go back? 
-    <mat-icon aria-hidden="false" class="snackbar-icons" fontIcon="save" matTooltip="Save" (click)="onSave()"></mat-icon>
-    <mat-icon aria-hidden="false" class="snackbar-icons" fontIcon="cancel" matTooltip="Go Back" (click)="onCancel()"></mat-icon>
+    <mat-icon class="snackbar-icons" fontIcon="save" matTooltip="Save" (click)="onSave()"></mat-icon>
+    <mat-icon class="snackbar-icons" fontIcon="cancel" matTooltip="Go Back" (click)="onCancel()"></mat-icon>
 </span>
