--- a/JobTrackerApp/src/components/manage-dialog-popups/dialog-jobprofiles/dialog-edit-jobprofiles/dialog-edit-jobprofiles.component.html
+++ b/JobTrackerApp/src/components/manage-dialog-popups/dialog-jobprofiles/dialog-edit-jobprofiles/dialog-edit-jobprofiles.component.html
@@ -1,6 +1,6 @@
 <div class="flex-container-components-inner">
     <p class="action-title">Create Job Profile</p>
-    <mat-icon aria-hidden="false" aria-label="Close" (click)="onClose()" class="close-icon">close</mat-icon>
+    <mat-icon aria-label="Close" (click)="onClose()" class="close-icon">close</mat-icon>
     <mat-tab-group class="vertical-tabs" mat-align-tabs="start" (selectedTabChange)="onTabChange($event)">
         <div class="flex-container-components-inner">
             <mat-tab label="JobProfile">
