--- a/JobTrackerApp/src/components/manage-employerprofiles/employerprofile/employerprofile.component.html
+++ b/JobTrackerApp/src/components/manage-employerprofiles/employerprofile/employerprofile.component.html
@@ -1,6 +1,6 @@
 <div class="flex-container-components-inner">
     <p class="action-title">Update Employer Profile</p>
-    <mat-icon aria-hidden="false" aria-label="Close" (click)="onClose()" class="close-icon">close</mat-icon>
+    <mat-icon aria-label="Close" (click)="onClose()" class="close-icon">close</mat-icon>
     <!-- <span class="span-right">
         <mat-icon class="employerprofile-icons" matTooltip="Add new employer profile" fontIcon="add" *ngIf="showEmployerOptions" (click)="onCreateEmployerProfile()"></mat-icon>
         <mat-icon class="employerprofile-icons" matTooltip="Update employer profile" fontIcon="edit" *ngIf="showEmployerOptions" (click)="onEditEmployerProfile()"></mat-icon>
