--- a/JobTrackerApp/src/components/modular/closebutton-modular/closebutton-modular.component.html
+++ b/JobTrackerApp/src/components/modular/closebutton-modular/closebutton-modular.component.html
@@ -1,1 +1,1 @@
-<mat-icon aria-hidden="false" aria-label="Close" (click)="onClose()" class="close-icon">close</mat-icon>
+<mat-icon aria-label="Close" (click)="onClose()" class="close-icon">close</mat-icon>
